--- a/learning/week8/q1.md
+++ b/learning/week8/q1.md
@@ -1,6 +1,162 @@
 # Individual 1 of 3
 
-## (Question class)
 
-(fill in the rest to provide an interactive visualization interface for
-    this question class)
+Pick one question class and build an exploratory visualization interface for it.
+The question class you pick must have at least three variables that can be changed.
+
+## In a selected state what is ths distribtion of the selected category by city?
+
+
+<div style="border:1px grey solid; padding:5px;">
+    <div><h5>Select a state</h5>
+        <input id="state" type="text" value="AZ"/>
+    </div>
+    <div><h5>Select business category </h5>
+        <input id="category" type="text" value="Doctors"/>
+    </div>
+    <div><h5>Select sort order 'ascending' or 'descending'</h5>
+        <input id="order" type="text" value="ascending"/>
+    </div>
+    <div style="margin:20px;">
+        <button id="viz">Vizualize</button>
+    </div>
+</div>
+
+<div class="myviz" style="width:100%; height:500px; border: 1px black solid; padding: 5px;">
+Data is not loaded yet
+</div>
+
+{% script %}
+items = 'not loaded yet'
+$.get('http://bigdatahci2015.github.io/data/yelp/yelp_academic_dataset_business.5000.json.lines.txt')
+    .success(function(data){
+        var lines = data.trim().split('\n')
+
+        // convert text lines to json arrays and save them in `items`
+        items = _.map(lines, JSON.parse)
+
+        console.log('number of items loaded:', items.length)
+
+        console.log('first item', items[0])
+     })
+     .error(function(e){
+         console.error(e)
+     })
+
+function viz(state, category, order){
+
+    // define a template string
+    var tplString = '<g transform="translate(0 ${d.y})"> \
+                    <text y="20">${d.label}</text> \
+                    <rect x="140"   \
+                         width="${d.width}" \
+                         height="20"    \
+                         style="fill:${d.color};    \
+                                stroke-width:3; \
+                                stroke:rgb(0,0,0)" />   \
+                    </g>'
+
+    // compile the string to get a template function
+    var template = _.template(tplString)
+
+    function computeX(d, i) {
+        return 100
+    }
+
+    function computeWidth(d, i) {
+        return d[1]/max * 600
+    }
+
+    function computeY(d, i) {
+        return i * 20
+    }
+
+    function computeColor(d, i) {
+        return 'red'
+    }
+
+    function computeLabel(d, i) {
+        return d[0]
+    }
+    
+    // First filter all entries for the specified state
+    st = _.filter(items, function(d) {
+		return d.state == state
+        })
+
+    console.log(st)
+    
+    // Next filter these by the categrory
+    cats = _.filter(st,function(d){
+	return _.includes(d.categories,category)
+    })
+    console.log(cats)
+ 
+    // Next group by city
+    var groups = _.groupBy(cats, 'city')
+
+    // Take groups and attach counts to stat
+    var counts = _.mapValues(groups, function(d){
+        l = d.length
+        return l
+    })
+    console.log(counts)
+
+    countByState = _.pairs(counts)
+
+    console.log(countByState)
+
+    sortedStates = _.sortBy(countByState,function(d){
+        if (order == 'ascending'){
+                return d[1]
+        }
+        else{
+                return -d[1]
+        }
+
+    })
+    console.log(sortedStates)
+
+    max = (_.max(countByState, function(d){
+        return d[1]
+
+    }))[1]
+   
+    console.log('max',max)
+
+    // take the first 20 items to visualize
+    show = _.take(sortedStates,20 )
+
+    var viz = _.map(show, function(d, i){
+                return {
+                    x: computeX(d, i),
+                    y: computeY(d, i),
+                    width: computeWidth(d, i),
+                    color: computeColor(d, i),
+                    label: computeLabel(d, i)
+                }
+	})
+
+    console.log('viz', viz)
+
+    var result = _.map(viz, function(d){
+             // invoke the compiled template function on each viz data
+             return template({d: d})
+         })
+    console.log('result', result)
+
+    $('.myviz').html('<svg width="100%" height="100%">' + result + '</svg>')
+}
+
+$('button#viz').click(function(){
+    var state = $('input#state').val()
+    var category = $('input#category').val()
+    var order = $('input#order').val()
+    console.log(state,category,order)
+    viz(state,category,order)
+})
+
+
+
+{% endscript %}
+
